# predictionprophet-deployment

./: .gitignore  Dockerfile  README.md  build_and_push.sh  mypy.ini  pyproject.toml
.github/workflows/: python_ci.yaml
predictionprophet_deployment/: run_agent.py
predictionprophet_deployment/agents/prophet_agent/: deploy.py
