[tool.poetry]
name = "predictionprophet-deployment"
version = "0.1.0"
description = ""
authors = ["Gnosis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
typer = "^0.9.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"
black = "^23.12.1"
autoflake = "^2.2.1"
isort = "^5.13.2"
# Prediction Prophet is now loosely constrained for `prediction-market-agent-tooling = { version = ">=0.43.0,<1", extras = ["langchain", "google"] }`,
# so unless there are breaking changes, it's enough to update PMAT here.
prediction-market-agent-tooling = { version = "^0.43.2", extras = ["langchain", "google"] }
prediction-prophet = {git = "https://github.com/agentcoinorg/predictionprophet", rev = "0564033867cab3dd620239b042f9f294cb07fb4a"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
